--- a/Lowpriceapp/account.html
+++ b/Lowpriceapp/account.html
@@ -17,7 +17,7 @@
   </header>
   <main class="account-container">
     <section class="account-section">
-      <div class="row"><span>My Orders</span><a class="link" href="#">View All Orders</a></div>
+      <div class="row"><span>My Orders</span><a class="link" href="order.html">View All Orders</a></div>
       <div class="icon-grid">
         <div class="icon-item">To Pay</div>
         <div class="icon-item">To Ship</div>
