--- a/Lowpriceapp/login.html
+++ b/Lowpriceapp/login.html
@@ -29,7 +29,7 @@
       <button class="social-btn google">G</button>
     </div>
     <div class="links-row">
-      <a href="#">Login Now</a>
+      <a href="account.html">Login Now</a>
       <span>•</span>
       <a href="#">Trouble Sign in?</a>
     </div>
